--- a/main.css
+++ b/main.css
@@ -5,11 +5,13 @@
 body {
   margin: 0%;
   background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
 }
 
 .mainpage {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.205), rgba(0, 0, 0, 0.637)), url(./img/mp/bck_pix.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.205), rgba(0, 0, 0, 0.637)),
+    url(./img/mp/bck_pix.png);
   background-size: cover;
   z-index: -2;
 }
@@ -36,7 +38,63 @@ body {
   background-color: black;
 }
 
+.buttoncontainer {
+  padding-top: 1%;
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  height: 10vh;
+  align-items: center;
+}
+
+.buttonwrapper {
+  width: 50%;
+  display: flex;
+  position: relative;
+  margin-left: 25%;
+  margin-right: 25%;
+  flex-wrap: no-wrap;
+  justify-content: center;
+}
+
+.imageb {
+  position: relative;
+  padding-left: 25px;
+  width: 90px;
+  height: 90px;
+  background-image: url(./img/logo/logo.png);
+}
+
+.buttoncol {
+  box-sizing: border-box;
+  display: flex;
+}
+
+.buttoncol:nth-child(2) {
+  padding-left: 5%;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.buttond {
+  min-height: 20px;
+  min-width: 40%;
+  height: 100%;
+  background-color: black;
+  color: #ffffff;
+  border: none;
+}
+
+.buttond1 {
+  min-height: 20px;
+  min-width: 40%;
+  height: 100%;
+  background-color: black;
+  color: #ffffff;
+  border: none;
+}
+
 .container {
+  padding-top: 5%;
   width: 70%;
   margin-right: 15%;
   margin-left: 15%;
@@ -122,6 +180,49 @@ body {
   text-align: left;
 }
 
+.aboutus {
+  min-height: 100vh;
+  color: #ffffff;
+  background-color: black;
+}
+
+.container3 {
+  text-align: center;
+  padding-top: 5%;
+  width: 40%;
+  margin-right: 30%;
+  margin-left: 30%;
+  color: white;
+}
+
+.container4 {
+  padding-top: 5%;
+  width: 80%;
+  margin-right: 10%;
+  margin-left: 10%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col3 {
+  flex-basis: 20%;
+  padding: 2.5%;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  display: flex;
+}
+
+.aboutcard {
+  margin-bottom: 5%;
+  height: 100%;
+  width: 400%;
+  padding: 0px;
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  justify-content: center;
+  text-align: center;
+}
+
 .formpage {
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.596), rgba(0, 0, 0, 0.637)),
@@ -181,7 +282,7 @@ input[type="text"] {
   color: black;
 }
 
-footer {
+.footer {
   background: rgb(0, 0, 0);
   height: 20vh;
 }
@@ -195,4 +296,67 @@ footer {
   position: relative;
   top: 20%;
   left: 50%;
+}
+
+@media screen and (max-width: 420px) {
+  .header {
+    
+    padding-top: 30%;
+  }
+  .header h1{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    
+  }
+
+  .buttoncontainer {
+    display: flex;
+    width: auto;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 10%;
+    position: relative;
+  }
+
+  .buttonwrapper {
+    flex-wrap: wrap;
+  }
+
+  .container {
+    position: relative;
+    margin-top: 45%;
+  }
+
+  .imageb {
+    padding-top: 90px;
+  }
+
+  .formpage {
+    height: auto;
+  }
+  .container3 {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .container2 {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 100vh;
+  }
+
+  .footer {
+    display: flex;
+  }
+
+  .insta {
+    top: 15%;
+    left: 39%;
+    position: relative;
+  }
 }
